--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - mysql-data:/var/lib/mysql
 
   demo:
+#    image: demo
     build: /
     environment:
       DATASOURCE_URL: jdbc:mysql://mysql:3306/demo?createDatabaseIfNotExist=true&useUnicode=true&serverTimezone=UTC
