--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   demo:
 #    image: demo
-    build: /
+    build: .
     environment:
       DATASOURCE_URL: jdbc:mysql://mysql:3306/demo?createDatabaseIfNotExist=true&useUnicode=true&serverTimezone=UTC
     ports:
